Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2.1
-
Linux
Description
Changing the server version string only works with MariaDB clients.
Problem is that only these know to remove the RPL_VERSION_HACK prefix ("5.5.5-") added by the server, and that the server even applies the RPL_VERSION_HACK prefix if the version string was explicitly set to a different value in my.cnf
How to reproduce:
- change version to a different string in my.cnf, e.g.
version=5.6.23-log"
- connect to server with mysql client binary from MariaDB distribution:
Welcome to the MariaDB monitor. Commands end with ; or \g.Your MySQL connection id is 6Server version: 5.6.23-log Source distribution
- connect to server with mysql client binary from MySQL distribution:
Welcome to the MySQL monitor. Commands end with ; or \g.Your MySQL connection id is 7Server version: 5.5.5-5.6.23-log Source distribution
This leads to e.g. JDBC reporting a major and minor server version of 5 each, no matter what "version" is actually set to, so defeating the main purpose of version being fakable ...
Attachments
Issue Links
- is caused by
-
MDEV-7780 Support for faking server version
-
- Closed
-
- is duplicated by
-
MDEV-28723 MySQL Connector fails to connect to MariaDB
-
- Closed
-
- links to